[project]
name = "case-price-calc"
version = "0.1.0"
description = "Calculator for the total cost of CS2 cases"
authors = [
    {name = "shotlastc"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dearpygui (>=2.1.0,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "cx-freeze (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.cxfreeze]
executables = [
    { script = "src/main.py", target_name = "calculator.exe", base="Win32GUI" }
]

[tool.cxfreeze.build_exe]
packages = ["dearpygui"]